--- a/Demo/Route/View/home.html
+++ b/Demo/Route/View/home.html
@@ -2,5 +2,5 @@
 <p>The following links lead to pages demonstrating different approaches to building a website:</p>
 <ul>
 	<li><a href="/user">View-driven user list</a></li>
-	<li><a href="/resource/index">Resource Index</a></li>
+	<li><a href="/resource">Resource Index</a></li>
 </ul>
