Created Session and Authentication modules.

--- a/SlothDemo/Route/View/home.html
+++ b/SlothDemo/Route/View/home.html
@@ -3,4 +3,5 @@
 <ul>
 	<li><a href="/user">View-driven user list</a></li>
 	<li><a href="/resource">Resource Index</a></li>
+	<li><a href="/login">Login Page</a></li>
 </ul>
