Moved data providers out of Render module into a new DataProvider module. Added dynamic filtering functionality to data providers, using other data providers to supply filter data. Created session and authentication data providers.

--- a/SlothDemo/Route/View/home.html
+++ b/SlothDemo/Route/View/home.html
@@ -1,7 +1,8 @@
 <h1>Home</h1>
 <p>The following links lead to pages demonstrating different approaches to building a website:</p>
 <ul>
-	<li><a href="/user">View-driven user list</a></li>
+	<li><a href="/login">Login</a></li>
+	<li><a href="/user/current">Current User</a></li>
+	<li><a href="/user">User List (View-Driven)</a></li>
 	<li><a href="/resource">Resource Index</a></li>
-	<li><a href="/login">Login Page</a></li>
 </ul>
