Moved authentication views into Authentication subdirectory in demo project.

--- a/SlothDemo/Route/View/Authentication/loginForm.html
+++ b/SlothDemo/Route/View/Authentication/loginForm.html
@@ -7,5 +7,9 @@
 		Password
 		<input name="password" type="password">
 	</label>
+	<label>
+		Remember?
+		<input name="remember" type="checkbox" value="true">
+	</label>
 	<button type="submit">Log in</button>
 </form>
