--- a/SlothDemo/Route/View/Authentication/loginForm.html
+++ b/SlothDemo/Route/View/Authentication/loginForm.html
@@ -1,4 +1,4 @@
-<form action="/login" method="post">
+<form action="/auth/login" method="post">
 	<label>
 		Username
 		<input name="username" type="text">
