--- a/SlothDemo/Route/View/Authentication/loginRedundant.html
+++ b/SlothDemo/Route/View/Authentication/loginRedundant.html
@@ -1,2 +1,3 @@
 <p>Login failed for user <i>{{username}}</i>.</p>
+<p>You have been signed out of your previous session as <i>{{previousUsername}}</i>.</p>
 <p><a href="/auth/login">Try again</a></p>
