--- a/SlothDemo/Route/View/home.html
+++ b/SlothDemo/Route/View/home.html
@@ -1,7 +1,7 @@
 <h1>Home</h1>
 <p>The following links lead to pages demonstrating different approaches to building a website:</p>
 <ul>
-	<li><a href="/login">Login</a></li>
+	<li><a href="/auth/login">Login</a></li>
 	<li><a href="/user/current">Current User</a></li>
 	<li><a href="/user">User List (View-Driven)</a></li>
 	<li><a href="/resource">Resource Index</a></li>
