Added a SlothDemo page to show usage of the request data provider.

--- a/SlothDemo/Route/View/home.html
+++ b/SlothDemo/Route/View/home.html
@@ -5,4 +5,5 @@
 	<li><a href="/user/current">Current User</a></li>
 	<li><a href="/user">User List (View-Driven)</a></li>
 	<li><a href="/resource">Resource Index</a></li>
+	<li><a href="/using/request/params">Using request parameters</a></li>
 </ul>
