Added protocol to request properties held by the request module.

--- a/SlothDemo/Route/View/usingRequest.html
+++ b/SlothDemo/Route/View/usingRequest.html
@@ -5,6 +5,10 @@
 		<th>Value</th>
 	</tr>
 	<tr>
+		<td>Protocol:</td>
+		<td>{{data.request.protocol}}</td>
+	</tr>
+	<tr>
 		<td>URI:</td>
 		<td>{{data.request.uri}}</td>
 	</tr>
