Added session ID to request module data. This enables session ID to be passed to views via the request, rather than hacking it into the session data. The session module holds data stored in the session, not meta data about the session, such as its ID.

--- a/SlothDemo/Route/View/usingRequest.html
+++ b/SlothDemo/Route/View/usingRequest.html
@@ -28,4 +28,8 @@
 		<td>GET 'prop' Parameter:</td>
 		<td>{{data.request.params.get.prop}}</td>
 	</tr>
+	<tr>
+		<td>Session ID:</td>
+		<td>{{data.request.sessionId}}</td>
+	</tr>
 </table>
