--- a/SlothDemo/Route/View/home.html
+++ b/SlothDemo/Route/View/home.html
@@ -6,4 +6,5 @@
 	<li><a href="/user">User List (View-Driven)</a></li>
 	<li><a href="/resource">Resource Index</a></li>
 	<li><a href="/using/request/params">Using request parameters</a></li>
+	<li><a href="/using/helper/functions?lesser=1&greater=2">Helper demo</a></li>
 </ul>
