Corrected order of arguments for ifLessThan helper in demo project.

--- a/CelestialDemo/Route/View/helperDemo.html
+++ b/CelestialDemo/Route/View/helperDemo.html
@@ -5,7 +5,7 @@
 <p>
 	Is {{data.lesser}} less than {{data.greater}}?
 
-	{{#ifLessThan data.lesser data.greater}}
+	{{#ifLessThan data.greater data.lesser}}
 		Yes
 	{{else}}
 		No
