--- a/CelestialDemo/Route/View/home.html
+++ b/CelestialDemo/Route/View/home.html
@@ -6,5 +6,6 @@
 	<li><a href="/user">User List (View-Driven)</a></li>
 	<li><a href="/resource">Resource Index</a></li>
 	<li><a href="/using/request/params">Using request parameters</a></li>
+	<li><a href="/using/json/file">Using JSON file data provider</a></li>
 	<li><a href="/using/helper/functions?lesser=1&greater=2">Helper demo</a></li>
 </ul>
